# pylms

./: .env.sample  Dockerfile  docker-compose.yml
backend/: docker-compose.yml
backend/pythonlms/: .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/pythonlms/lms/: admin.py  models.py  serializers.py  urls.py  views.py
backend/pythonlms/lms/migrations/: 0001_initial.py  0002_alter_lesson_available_from.py  0003_alter_lesson_title.py  0004_auto_20231114_1900.py  0005_homeworksubmission.py  0006_auto_20231119_1435.py  0007_lesson_summary.py  0008_auto_20231126_1033.py  0009_homeworksubmission_approved.py  0010_homeworksubmission_comment.py  0011_cheatsheetelement.py
backend/pythonlms/pythonlms/: asgi.py  settings.py  urls.py  wsgi.py
backend/pythonlms/users/: admin.py  models.py  urls.py  views.py
backend/pythonlms/users/migrations/: 0001_initial.py  0002_userprofile_role.py  0003_auto_20231029_1945.py
backend/pythonlms/users/tests/: test_views.py
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json  tailwind.config.js  tslint.json
frontend/src/: index.html  styles.css
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
frontend/src/app/_helpers/: http.interceptor.ts
frontend/src/app/_services/: auth.service.ts  cheatsheet.service.ts  course.service.ts  lesson.service.ts  storage.service.ts  url.ts  user.service.spec.ts
frontend/src/app/login/: login.component.html  login.component.ts
frontend/src/app/models/: course.ts  user.ts
nginx/: service.conf
(+29 files in other folders)
