[tool.poetry]
name = "pythonlms"
version = "0.1.0"
description = ""
authors = ["antonio-marius.tricolici"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^3.2.4"
djangorestframework = "^3.12.4"
djangorestframework-jwt = "^1.11.0"
django-cors-headers = "^3.7.0"
cookiecutter = "^1.7.3"
psycopg = "^3.1.12"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
django-filter = "^23.3"
django-unfold = "^0.16.0"
django-import-export = "^3.3.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
